--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,13 @@
 <resources>
     <string name="app_name">CEON390-ProjectGroup</string>
     <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="action_developers">Developers</string>
+    <!-- Strings used for activities for navigation -->
+    <string name="mainactivity">MainActivity</string>
+    <string name="liveactivity">LiveActivity</string>
+    <string name="databaseactivity">DatabaseActivity</string>
+    <string name="button_live">Live</string>
+    <string name="button_database">Database</string>
+    <string name="developerNames">Athanas Bakleh\nDina Yashaev\nLucas Hotton\nOmar Mahmoud\nStefan Livadariu\nTaher Akkad</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
