--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="sensor_values">Sensor Values:</string>
     <string name="title_activity_live_monitoring">LiveMonitoring</string>
     <string name="title_activity_database">Database</string>
+    <string name="title_activity_settings">SettingsActivity</string>
 </resources>
